--- a/style.css
+++ b/style.css
@@ -1,32 +1,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+body {
+  background-color: #f7f7f7;
+}
+
+h1,
+p,
+h4,
+h3,
+li {
+  font-family: Montserrat;
+  color: #303030;
+}
+
 h1 {
-  font-family: "Montserrat";
   text-align: center;
-  font-size: 32px;
 }
 
 .nav-bar {
-  font-family: "Courier New";
   text-align: center;
+  font-family: "Courier New", Courier, monospace;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 545;
+  word-spacing: 1px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .top-center {
-  font-family: "Montserrat";
   text-align: center;
-}
-
-h3 {
-  font-family: "Montserrat";
-  font-weight: 600;
-}
-p,
-li {
-  font-family: "Montserrat";
-  font-weight: 500;
+  font-weight: 700;
 }
 
 h4 {
-  font-family: "Montserrat";
   text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+footer {
+  font-weight: 500;
 }
